--- a/css/main.css
+++ b/css/main.css
@@ -57,4 +57,15 @@ footer > p{
     
     }
 
+@media (max-device-width: 768px) {
+	html {
+	    background: url("../images/hs2.png") no-repeat center center fixed;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    -o-background-size: cover;
+	    background-size: cover;
+	    height: 100%;
+	    overflow: hidden;
+	}
+}
 
