--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html{
 	overflow-y: hidden;
 	height: 100vh;
-	background: black; 
+	background: black url("https://i.ibb.co/HnfkZ5V/IMG-7129.jpg") no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
